<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workspace</string>
    <string name="auth_app_name">Alfresco\nMobile Workspace</string>

    <string name="nav_title_recents">Recent</string>
    <string name="nav_title_favorites">Favorites</string>
    <string name="nav_title_tasks">@string/title_tasks</string>
    <string name="nav_title_offline">Offline</string>
    <string name="nav_title_browse">Browse</string>
    <string name="nav_title_settings">Account</string>
    <string name="nav_title_share">Share</string>
    <string name="nav_title_browse_extension">Save to Alfresco</string>

    <string name="sign_out_confirmation_title">Sign out</string>
    <string name="sign_out_confirmation_message">Are you sure you want to sign out?</string>
    <string name="sign_out_confirmation_positive">Yes</string>
    <string name="sign_out_confirmation_negative">Cancel</string>

    <string name="settings_sign_out">Sign out</string>
    <string name="settings_version">App version: %1$s</string>

    <string name="settings_theme_title">Theme</string>
    <string-array name="settings_theme_labels">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>

    <string name="auth_error_wrong_credentials">Wrong username or password provided.</string>
    <string name="settings_sync_network_title">Update offline files using</string>
    <string name="share_limit_message">Can\'t share more than 50 media items</string>
    <string name="no_type">No Type</string>
    <string name="accessibility_text_user_profile">User Profile Button</string>
    <string name="accessibility_text_user_info">Username: %s Email: %s</string>
    <string name="accessibility_text_close">Close</string>

    <string-array name="settings_sync_network_value_labels">
        <item>Wi-Fi only</item>
        <item>Wi-Fi and mobile data</item>
    </string-array>

    <string name="nav_title_ask_an_agent">Ask an Agent</string>
    <string name="fad_title">Knowledge Discovery is coming soon to the mobile - making it easy to extract valuable insights across your content, right from your device.</string>
    <string name="fad_message">Would this feature be valuable for the work you do?</string>
    <string name="text_close">Close</string>
    <string name="accessibility_text_ask_discovery">Ask Discovery Button</string>
    <string name="text_like">Like</string>
    <string name="text_dis_like">Dislike</string>
    <string name="text_thanks_feedback">Thank you for your feedback!</string>

</resources>
