<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/fake_discovery_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fad_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fad_message"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/color_on_surface_60"
        app:layout_constraintBottom_toTopOf="@id/ll_like_dislike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_like_dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/action_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.alfresco.ui.MaterialShapeView
                android:id="@+id/bg_like"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:contentDescription="@string/search_hint"
                app:backgroundColor="?android:attr/colorBackground"
                app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
                app:strokeColor="?android:attr/colorPrimary"
                app:strokeWidth="2dp" />

            <ImageView
                android:id="@+id/icon_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/icon_like" />

        </FrameLayout>

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.alfresco.ui.MaterialShapeView
               android:id="@+id/bg_dislike"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:visibility="invisible"
               android:contentDescription="@string/search_hint"
               app:backgroundColor="?android:attr/colorBackground"
               app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
               app:strokeColor="?android:attr/colorPrimary"
               app:strokeWidth="2dp" />

           <ImageView
               android:id="@+id/icon_dislike"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="4dp"
               android:src="@drawable/icon_dislike" />

       </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/action_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="invisible"
        android:layout_marginBottom="16dp"
        android:text="Thank you for your feedback!"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/colorOrange"
        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bottom_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/color_view_line"
        app:layout_constraintBottom_toTopOf="@id/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        style="@style/Widget.Alfresco.Button.Disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>